Fix bug with UTF-8 problem in MySql docker image

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -6,6 +6,7 @@ services:
     ports:
       - 3306:3306
     environment:
+      LANG: C.UTF-8
       MYSQL_ROOT_PASSWORD: dzalian_saidumloa
       MYSQL_DATABASE: tomara
       MYSQL_USER: tomariani
