Added elasticsearch to docker-compose

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -20,3 +20,25 @@ services:
       options:
         max-size: "10k"
         max-file: "10"
+  elasticsearch:
+    image: docker.elastic.co/elasticsearch/elasticsearch:8.7.0
+    container_name: tomara_elasticsearch
+    ports:
+      - 9200:9200
+      - 9300:9300
+    environment:
+      - xpack.security.enabled=false
+      - discovery.type=single-node
+      - bootstrap.memory_lock=true
+      - "ES_JAVA_OPTS=-Xms256m -Xmx256m"
+    volumes:
+      - ./volume/elasticsearch/:/usr/share/elasticsearch/data
+    ulimits:
+      memlock:
+        soft: -1
+        hard: -1
+    logging:
+      driver: "json-file"
+      options:
+        max-size: "10k"
+        max-file: "10"
